[project]
name = "grafana-dashboard-v4"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "apscheduler==3.6.3",
    "mysqlclient==2.1.1",
    "paho-mqtt==1.6.1",
    "pymysql==1.1.1",
    "python-dotenv==1.0.1",
    "sqlalchemy==2.0.20",
]

[dependency-groups]
dev = [
    "alembic>=1.14.1",
]
